vX.Y.Z (YYYY-MM-dd)

- Update touchstone tool commands to use "ts", enabling use of ts-tools
  AppImage, requires at minimum touchstone-tools v0.6.x
- Update scripts to use "dbt2" where appropriate, enabling use of dbt2 AppImage

v0.53.2 (2023-06-19)

- Quiet sqlite3 post-process script from displaying an error when there are no
  New Order transactions
- Rename post-process.sql to post-process.sqlite3
- Update AppImage container file to use Ubuntu 14.04
- Add missing libraries to AppImage for gnuplot
- Add fonts to Appimage for gnuplot
- Replace readlink with realpath
- Remove dependency on bc from sqlite3 post-process script

v0.53.1 (2023-05-20)

- AppImage checks for existing LD_LIBRARY_PATH before updating
- Add missing libraries for gnuplot to AppImage
- Fix installation of dbt2-build man page
- Update dbt2.desktop syntax for aarch64 AppImage
- Add "activate" script to AppImage

v0.53.0 (2023-05-17)

- Add "report" script to handle both post-process and generate-report scripts
- Update AppImage to use touchstone-tools v0.5.2
- Update format of transaction summary output
- Update "build" and "run" to use "dbt2" command
- Quiet find commands in generate-report
- Update "run" script to pass on user and port information to ts-pgsql-stat
- Add quick-start section to documentation

v0.52.0 (2023-04-30)

- Use profiling scripts from touchstone-tools to collect readprofile, oprofile,
  or perf if requested and available
- Add command line flag to pgsql-load-stored-procs and pgsql-build-db to
  specify alternative location for pl/pgsql stored functions
- Rename run-workload script to run
- Update run script to use touchstone-tools v0.5.1
- Refactor run logic for handling 1-tier, 2-tier, and 3-tier testing test
  execution and stats collection.
- Remove "easy" script and instead make its parameters the default execution
  method, thus breaking down the traditional benchmark specification behavior
  into additional options